update test suite to current output formats

--- a/test/middle-scheme/MD_Unconstr_Langevin_water/md_LGV.in
+++ b/test/middle-scheme/MD_Unconstr_Langevin_water/md_LGV.in
@@ -5,8 +5,8 @@ MD: NVT simulation of liquid water
    temp0 = 300, tempi = 300      ! temperature: target and initial
    dt = 0.001                    ! time step in ps
    cut = 7.0                     ! non-bond cut off
-   ithermostat = 1               !! Langevin thermostat
-   therm_par = 5.0               !! friction coefficient gamma = 5 ps^{-1}
+   ntt = 3                      !! Langevin thermostat
+   gamma_ln = 5.0               !! friction coefficient gamma = 5 ps^{-1}
    ig = 1000                     ! given random seed for reproducing results
    ntc = 1, ntf = 1              ! constrain bonds with H
    ntpr = 1, ntwr = 0, ntwx = 0  ! output settings
