--- a/test/middle-scheme/MD_Constr_Langevin_water/md_LGV.in
+++ b/test/middle-scheme/MD_Constr_Langevin_water/md_LGV.in
@@ -5,9 +5,10 @@ MD: NVT simulation of liquid water
    temp0 = 300, tempi = 300      ! temperature: target and initial
    dt = 0.004                    ! time step in ps
    cut = 7.0                     ! non-bond cut off
-   ithermostat = 1,              !! Langevin thermostat, random seed is default value
-   therm_par = 5.0               !! thermostat parameter, in 1/ps
-                                 !! (fricition coefficient for Langevin thermostat) 
+   ig = 71277,
+   ntt = 3,                      ! Langevin thermostat
+   gamma_ln = 5.0                ! thermostat parameter, in 1/ps
+                               !! (fricition coefficient for Langevin thermostat) 
    ntc = 2, ntf = 2              ! constrain bonds with H
    ntpr = 1, ntwr = 0, ntwx = 0  ! output settings
 /
