--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -35,7 +35,7 @@ QMOBJ= \
     qmmm_adaptive_module.o prn_qmmm_dipole.o
 
 MMOBJ = \
-    align.o AmberNetcdf.o amd.o amopen.o assert.o \
+    align.o AmberNetcdf.o amopen.o assert.o \
     barostats.o binrestart.o bintraj.o charmm.o \
     constants.o csa.o cshf.o \
     debug.o decnvh.o degcnt.o dssp.o \
@@ -58,7 +58,7 @@ MMOBJ = \
     wallclock.o xminC.o veclib.o dsarpack.o nxtsec.o
 
 LESOBJ= \
-    align.o AmberNetcdf.o amd.o amopen.o \
+    align.o AmberNetcdf.o amopen.o \
     assert.o barostats.o binrestart.LES.o bintraj.LES.o charmm.o \
     constants.o csa.o \
     cshf.o debug.o decnvh.o degcnt.LES.o \
