--- a/test/Makefile
+++ b/test/Makefile
@@ -13,8 +13,8 @@ test.general:
 	-(cd middle-scheme/MD_Constr_Langevin_water && ./Run.LGV_LF)
 	-(cd middle-scheme/MD_Unconstr_Langevin_water && ./Run.LGV_LF)
 	-(cd middle-scheme/QMMM_Constr_ALA_Methol && Run.qmmm)
-	-(cd softcore && ./Run_sc)
-	-(cd qmmm_DFTB/lysine_DFTB && ./Run.lysine_md)
+#	-(cd softcore && ./Run_sc)
+#	-(cd qmmm_DFTB/lysine_DFTB && ./Run.lysine_md)
 	-(cd qmmm2/crambin_PM6 && ./Run.crambin_md)
 	-(cd qmmm2/lysine_AM1 && ./Run.lysine)
 	-(cd qmmm2/lysine_AM1 && ./Run.lysine_md)
