getting no_ips to work, at least in serial mode

--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -43,7 +43,7 @@ MMOBJ = \
     ew_box.o ew_bspline.o ew_fft.o \
     ew_force.o ew_recip.o ew_setup.o extra_pts.o \
     fastwt.o file_io_dat.o findmask.o force.o getcor.o \
-    icosasurf.o ips.o iwrap2.o les.o linear_response.o \
+    icosasurf.o iwrap2.o les.o linear_response.o \
     lmodC.o lmod.o locmem.o matinv.o mbar.o \
     mdfil.o mdread.o md_scheme.o mdwrit.o memory_module.o \
     mexit.o minrit.o molecule.o mtmdcall.o multisander.o \
@@ -66,7 +66,7 @@ LESOBJ= \
     erfcfun.o ew_box.LES.o ew_bspline.o \
     ew_fft.o ew_force.LES.o ew_recip.LES.o ew_setup.LES.o \
     extra_pts.LES.o fastwt.o file_io_dat.o findmask.o force.LES.o \
-    getcor.LES.o icosasurf.o ips.o iwrap2.o \
+    getcor.LES.o icosasurf.o iwrap2.o \
     les.o linear_response.o lmodC.o lmod.LES.o locmem.LES.o \
     matinv.o mbar.o mdfil.LES.o mdread.LES.o md_scheme.LES.o \
     mdwrit.LES.o memory_module.o mexit.o minrit.LES.o molecule.o \
