clean xtalutil folder; fix xray/Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,6 +37,7 @@ clean:
 	-(cd xray/cuda && $(MAKE) clean )
 	-(cd addles && $(MAKE) clean )
 	-(cd sqm && $(MAKE) clean )
+	-(cd xtalutil && $(MAKE) clean )
 
 uninstall: clean
 	-(cd $(BINDIR) && /bin/rm -f msander msander.MPI \
