--- a/src/xray/cuda/Makefile
+++ b/src/xray/cuda/Makefile
@@ -5,11 +5,6 @@ include ../../../config.h
 #CUDA Specific build flags  -- use nvcc in the PATH for now; 
 #                              may want to set with configure later
 NVCC=nvcc \
-   -gencode arch=compute_52,code=sm_52 \
-   -gencode arch=compute_53,code=sm_53 \
-   -gencode arch=compute_60,code=sm_60 \
-   -gencode arch=compute_70,code=sm_70 \
-   -gencode arch=compute_75,code=sm_75 \
    -Wno-deprecated-declarations -use_fast_math -O3 \
    -I/usr/local/cuda/include -IB40C $(CUDAFLAGS) --std c++14
 
@@ -29,7 +24,7 @@ CUOBJS = BulkMaskGPU.o	DPartialGPU.o	NonBulkGPU.o
 
 xray_cuda.o: $(CUOBJS) $(CPPOBJS)
 	@echo "[XRAY] nvcc -dlink $@"
-	$(VB)nvcc -dlink -o $@ $(CUOBJS) $(CPPOBJS)
+	$(VB)$(NVCC) -dlink -o $@ $(CUOBJS) $(CPPOBJS)
 
 libxray_cuda: $(LIBDIR)/libxray_cuda.a
 
