ccp4 -> mrc for binary density outputs

--- a/src/rism/Makefile
+++ b/src/rism/Makefile
@@ -10,7 +10,7 @@ LIBOBJ = array_util.o rism_util.o \
 	rism3d_grid_c.o rism3d_closure_c.o \
 	rism3d_kh_c.o rism3d_hnc_c.o rism3d_psen_c.o \
 	rism3d_c.o rism3d_potential_c.o rism3d_restart.o \
-	rism3d_xyzv.o rism3d_opendx.o rism3d_ccp4.o \
+	rism3d_xyzv.o rism3d_opendx.o rism3d_mrc.o \
 	rism3d_solvent_c.o rism3d_solute_c.o \
 	rism3d_fft.o rism_parm.o rism_io.o \
 	mdiis_orig_c.o mdiis_blas_c.o mdiis_blas2_c.o mdiis_c.o \
